Update the design of the auth

--- a/resources/css/components/typography.css
+++ b/resources/css/components/typography.css
@@ -10,7 +10,7 @@ textarea {
     @apply font-display;
     @apply leading-relaxed;
     @apply text-md;
-    @apply font-normal;
+    @apply font-medium;
     @apply tracking-wide;
 
     @screen sm {
