--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,6 +4,7 @@
 @import "./components/typography.css";
 @import "./components/input.css";
 @import "./components/button.css";
+@import "./components/table.css";
 
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
