--- a/resources/css/components/button.css
+++ b/resources/css/components/button.css
@@ -9,6 +9,7 @@
     @apply border-gray-500;
     @apply bg-gray-500;
     @apply text-white;
+    @apply justify-center;
 
     &.btn-round {
         @apply rounded-full;
